# WatershedSegmentation

./: .gitignore  CMakeLists.txt  README.md
inc/: cropping.hpp  image.hpp  nuclei_segregation.hpp  opts.hpp
inc/binning/: bin_genes.hpp  binning.hpp  gem.hpp  nuclei_spots.hpp
inc/plotting/: plotting.hpp
inc/watershed/: watershed.hpp
src/: CMakeLists.txt  image.cpp  nuclei_segregation.cpp  opts.cpp
src/binning/: bin_genes.cpp  binning.cpp  gem.cpp  nuclei_spots.cpp
src/cropping/: cropping.cpp
src/plotting/: plotting.cpp
src/watershed/: fg_bg.cpp  watershed.cpp
